# amr_base

src/amr_bringup/: package.xml  readme.md  setup.py
src/amr_bringup/launch/: bringup.launch.py
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/config/: controllers.yaml
src/amr_description/urdf/: amr.urdf
src/drax_hardware/: CMakeLists.txt  package.xml  plugin.xml  read_me.md
src/drax_hardware/include/drax_hardware/: canopen_node.hpp  drax_hardware.hpp  motor.hpp  socket_can.hpp
src/drax_hardware/src/: canopen_node.cpp  drax_hardware.cpp  motor.cpp  socket_can.cpp
src/drax_hardware/tools/: amr.urdf  concept.md  read.py  template_of_hardware.cpp
